redirect dump file artifacts to a temporary repo on artifactory

--- a/setup.cfg
+++ b/setup.cfg
@@ -35,7 +35,8 @@ asdf_schema_root = jwst/transforms/schemas jwst/datamodels/schemas
 doctest_plus = enabled
 junit_family = xunit2
 inputs_root = jwst-pipeline
-results_root = jwst-pipeline-results
+#results_root = jwst-pipeline-results
+results_root = datb-generic
 
 [bdist_wheel]
 # This flag says that the code is written to work on both Python 2 and Python
