--- a/setup.cfg
+++ b/setup.cfg
@@ -33,7 +33,8 @@ asdf_schema_tests_enabled = true
 asdf_schema_root = jwst/transforms/schemas jwst/datamodels/schemas
 junit_family = xunit2
 inputs_root = jwst-pipeline
-results_root = jwst-pipeline-results
+#results_root = jwst-pipeline-results
+results_root = datb-generic
 doctest_plus = true
 doctest_rst = true
 text_file_format = rst
